# tradingflow-contracts

./: .gitignore  .gitmodules  README.md
MultiVault/: README.md  package.json  tsconfig.json
PersonalVault/: .env.example  README.md  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
PersonalVault/contracts/: PersonalVault.sol  PersonalVaultFactory.sol  PersonalVaultFactoryUniV2.sol  PersonalVaultUpgradeable.sol  PersonalVaultUpgradeableUniV2.sol
PersonalVault/scripts/: botSwap.ts  createVault.js  createVault.ts  createVaultUser.ts  deploy.js  deployFactory.ts  deployFactoryFlow.ts  deploy_verify_create.sh  deposit.ts  withdraw.ts
PersonalVault/test/: 01_basic_functionality.test.js  02_native_token.test.js  03_swap.test.js  personalVault.proxy.test.ts  personalVault.test.ts  personalVaultUniV2.test.js
aptos/: .gitignore  LICENSE  Move.toml  README.md  README.zh-CN.md  TradingFlow_Aptos_Milestone1_Report  package-lock.json  package.json  pnpm-lock.yaml
aptos/sources/: vault_v0.move.backup  vault_v1.move
aptos/ts-scripts/: config.ts  index.ts  package-lock.json  package.json  utils.ts
debug_scripts/: README.md
debug_scripts/Flow-EVM/: debug_error.js
evm/: README.md
evm/MultiVault/: README.md  hardhat.config.js
evm/PersonalVault/: .env.example
scripts/: manage_pool_and_swap_by_vault.py  vault_cli.py
solana/: README.md
solana/PersonalVault/: Anchor.toml  Cargo.toml
solana/PersonalVault/src/: lib.rs
solana/PersonalVault/test/: idl.json  package-lock.json  package.json  test.ts  wallet1-keypair.json
(+97 files in other folders)
